--- a/Searchy/View.xib
+++ b/Searchy/View.xib
@@ -11,9 +11,8 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="ViewController" customModule="Searchy" customModuleProvider="target">
             <connections>
-                <outlet property="button" destination="VQ6-uu-Uh2" id="4l0-9V-UiU"/>
-                <outlet property="label" destination="rWf-aP-dwg" id="xxc-4o-NXx"/>
-                <outlet property="view" destination="iN0-l3-epB" id="Pd3-Yr-APG"/>
+                <outlet property="view" destination="iN0-l3-epB" id="tQf-SP-aNQ"/>
+                <outlet property="webView" destination="1Lp-wx-uoC" id="3P2-9C-t5O"/>
             </connections>
         </placeholder>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
@@ -21,20 +20,18 @@
             <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
-                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="rWf-aP-dwg">
-                    <rect key="frame" x="111" y="112" width="142" height="43"/>
-                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                    <nil key="textColor"/>
-                    <nil key="highlightedColor"/>
-                </label>
-                <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="VQ6-uu-Uh2">
-                    <rect key="frame" x="98" y="202" width="46" height="30"/>
-                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                    <state key="normal" title="Button"/>
-                </button>
+                <webView contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="1Lp-wx-uoC">
+                    <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                    <color key="backgroundColor" red="0.36078431370000003" green="0.38823529410000002" blue="0.4039215686" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                </webView>
             </subviews>
             <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+            <constraints>
+                <constraint firstAttribute="trailing" secondItem="1Lp-wx-uoC" secondAttribute="trailing" id="3Jt-Yf-OTB"/>
+                <constraint firstItem="1Lp-wx-uoC" firstAttribute="leading" secondItem="iN0-l3-epB" secondAttribute="leading" id="D44-tb-laD"/>
+                <constraint firstAttribute="bottom" secondItem="1Lp-wx-uoC" secondAttribute="bottom" id="H3Z-Gg-EYA"/>
+                <constraint firstItem="1Lp-wx-uoC" firstAttribute="top" secondItem="iN0-l3-epB" secondAttribute="top" id="Idi-Fp-p8N"/>
+            </constraints>
             <point key="canvasLocation" x="33.5" y="131.5"/>
         </view>
     </objects>
