fixed table view section problem

--- a/Searchy/Table.xib
+++ b/Searchy/Table.xib
@@ -40,7 +40,7 @@
                 <constraint firstItem="IpM-Xi-xQb" firstAttribute="top" secondItem="9iq-o8-ZbV" secondAttribute="bottom" id="BT1-xX-vVd"/>
                 <constraint firstItem="IpM-Xi-xQb" firstAttribute="trailing" secondItem="9iq-o8-ZbV" secondAttribute="trailing" id="Me9-sI-L5F"/>
                 <constraint firstItem="IpM-Xi-xQb" firstAttribute="leading" secondItem="9iq-o8-ZbV" secondAttribute="leading" id="QP1-G4-NeQ"/>
-                <constraint firstAttribute="bottom" secondItem="IpM-Xi-xQb" secondAttribute="bottom" id="cmN-e4-Hdr"/>
+                <constraint firstAttribute="bottom" secondItem="IpM-Xi-xQb" secondAttribute="bottom" id="gKS-Y1-G9J"/>
                 <constraint firstItem="9iq-o8-ZbV" firstAttribute="top" secondItem="iN0-l3-epB" secondAttribute="top" id="jaA-Hn-SX7"/>
                 <constraint firstItem="IpM-Xi-xQb" firstAttribute="leading" secondItem="iN0-l3-epB" secondAttribute="leading" id="nqp-Cj-155"/>
             </constraints>
